# CopyClip

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  Trunk.toml  bonnie.toml  flake.nix  index.html  package-lock.json  package.json  pnpm-lock.yaml  style.css  tailwind.config.js  tailwind.css  tailwindcss.sh  vite.config.ts  wasm-opt.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: devcontainer-dockerhub.yml  devskim.yml  lint-js.yml  lint-rs.yml  prerelease-build.yml  prerelease-publish.yml  update_contributor.yml
.vim/: coc-settings.json
locales/: TODO.en.yml  de.yml  en-GB.yml  en.yml  zh-CN.yml
scripts/: install-dependency-linux.sh
src/: App.css  App.tsx  app.rs  i18n.rs  i18n.tsx  index.rs  invoke.rs  main.rs  preferences.rs  route.rs
src-back/: i18n.rs  main.rs  route.rs
src-back/components/: head_bar.rs
src-back/components/preferences/: int_config_template.rs  language_config.rs  log_level_filter_config.rs  option_choose_config_template.rs
src-back/pages/: mod.rs  preferences.rs
src-back/search/: search_labels_bar.rs
src-clip/: Cargo.toml  README.md
src-clip/src/: clip_struct.rs  clip_type.rs  compress_data.rs  lib.rs  search_constraint.rs  search_text.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/sqlite3/: regexp.c
src-tauri/src/: event.rs  lib.rs  main.rs
src-tauri/src/backward/: mod.rs  v0_2_x_to_0_3_0_database.rs  v0_3_7_to_0_3_8_database.rs  v0_3_8_to_0_3_9_database.rs  v0_3_9_to_0_3_10_database.rs  v0_3_x_to_0_3_3_config.rs  v0_3_x_to_0_3_5_database.rs  v0_3_x_to_0_3_7_database.rs
src-tauri/src/clip/: cache.rs  clip_data.rs  clip_id.rs  clip_struct.rs  clip_type.rs  database.rs  image_clip.rs  mod.rs  monitor.rs  pinned.rs  search.rs
src-tauri/src/clip_frontend/: clip_data.rs  image_clip.rs  mod.rs
src-tauri/src/config/: command.rs  mod.rs
src-tauri/src/database/: init.rs  mod.rs  search.rs
src-tauri/src/error/: mod.rs
src-tauri/src/export/: mod.rs
src-tauri/src/log/: mod.rs
src-tauri/src/systray/: mod.rs  system_tray_menu.rs
src/components/: AppHead.tsx  Card.tsx  CardButton.tsx  clips_per_page_config.rs  head_bar.rs  loading.rs  mod.rs
src/components/Preferences/: ClipPerPageConfig.tsx  ConfigTemplate.tsx  MaxClipLenConfig.tsx
src/components/preferences/: add_remove_pinned_clips.rs  clips_per_page_config.rs  clips_search_per_batch.rs  dark_mode_switch.rs  export_button.rs  int_config_template.rs  language_config.rs  log_level_filter_config.rs  max_clip_len_config.rs  mod.rs  option_choose_config_template.rs  search_clip_per_page.rs  set_auto_delete_duplications.rs  switch_pinned_status.rs  switcher_config_template.rs
src/pages/: help.rs  home.rs  index.rs  index.tsx  mod.rs  preferences.rs  search.rs  search.tsx
src/pages/preferences.tsx/: index.tsx
src/pages/search/: clip.rs  copy_clip_button.rs  favorite_button.rs  favourite_button.rs  favourite_clip_filter.rs  fuzzy_search_text.rs  mod.rs  order.rs  pin_clip_button.rs  pin_clip_filter.rs  search.rs  search_clip.rs  search_method.rs  search_res_table.rs  search_state.rs  time_display.rs  trash_clip_button.rs
src/search/: SearchDisplay.tsx  SearchHeadBar.tsx  SearchLabelsBar.tsx  mod.rs  search.tsx  search_display.rs  search_head_bar.rs  search_labels_bar.rs
tauri-plugin-logging/: Cargo.toml
tauri-plugin-logging/src/: api.rs  lib.rs
tauri-plugin-logging/src/tauri/: command.rs  logging.rs  mod.rs
