[package]
edition = "2021"
name = "copy_clip_ui"
version = "0.3.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
chrono = "0.4.24" 
futures = "0.3" 
gloo-console = "0.2.3" # for logging
js-sys = "0.3.47" 
regex = "1.7.3" 
serde = {version = "1.0.158", features = ["derive"]} 
serde-wasm-bindgen = "0.5.0" 
sublime_fuzzy = "0.7.0" 
wasm-bindgen = {version = "0.2", features = ["serde-serialize"]} 
wasm-bindgen-futures = "0.4" 
web-sys = {version = "0.3.61", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "MediaQueryList",
  "DomTokenList",
]} 
yew = {version = "0.20", features = ["csr"]}
yewdux = "0.9"
yew-router = "0.17" 
yew_icons = {version = "0.7", features = [
  "HeroiconsOutlineClipboardDocumentList",
  "BootstrapTrash",
  "LucideTimer",
  "BootstrapHeartHalf",
  "BootstrapHeartFill",
  "BootstrapHeart",
]} 

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[workspace]
members = ["src-tauri"]
