[package]
edition = "2021"
name = "copy_clip_ui"
version = "0.3.9"
license = "MIT"
rust-version = "1.78"

[package.metadata.i18n]
load-path = "locales"
default-language = "en-GB"
available-locales = ["en-GB", "zh-CN", "en", "de"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rust-i18n = "3.0.1"
chrono = "0.4.37"
js-sys = "0.3.47"
regex = "1.10.3"
serde = { version = "1.0.202", features = ["derive"] }
serde-wasm-bindgen = "0.6.3"
sublime_fuzzy = "0.7.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
once_cell = "1.19.0"
web-sys = { version = "0.3.67", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "MediaQueryList",
  "DomTokenList",
] }
yew = { version = "0.21", features = ["csr"] }
yewdux = "0.10.0"
yew-router = "0.18"
yew_icons = { version = "0.8", features = [
  "HeroiconsOutlineClipboardDocumentList",
  "BootstrapTrash",
  "LucideTimer",
  "BootstrapHeartHalf",
  "BootstrapHeartFill",
  "BootstrapHeart",
  "BootstrapPinAngle",
  "BootstrapPinAngleFill"
] }
# for logging
tauri-plugin-logging = {path = "./tauri-plugin-logging", features = ["api"]}
clip = {path = "./src-clip", features = ["yew"]}

[profile.release]
# Strip all the debug symbles
strip = true
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using whole-program analysis
lto = true

[workspace]
members = [
  "src-tauri",
  "src-clip",
  "tauri-plugin-logging"
]
