[package]
name = "clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
yew = { version = "*", features = ["csr"], optional = true }

[features]
yew = ["dep:yew"]
