[package]
name = "clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"
log = "0.4"
anyhow = "1.0.86"
rten = { version = "0.13.1", optional = true }
image = { version = "0.25.1", default-features = false, features = [
    "png",
], optional = true }
once_cell = { version = "1.19.0" }
ocrs = { version = "0.9.0", optional = true }
rtf-parser = { version = "0.3.0", optional = true }
html2text = { version = "0.12.5", optional = true }
flate2 = { version = "1.0", optional = true }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
yew = { version = "*", features = ["csr"], optional = true }
rusqlite = { version = "*", features = ["bundled"], optional = true }

[features]
default = ["backend"]
backend = ["compress", "search", "database"]
yew = ["dep:yew"]
compress = ["flate2"]
search = ["ocr", "dep:rtf-parser", "dep:html2text"]
ocr = ["dep:ocrs", "dep:image", "dep:rten"]
database = ["dep:rusqlite"]
