[package]
authors = [
    "Zifan Hua <zifan.hua@icloud.com>",
    "Chloe1222 <chloekeyiw@gmail.com>",
]
description = "A feature-rich clipboard manager for Windows, Linux and macOS."
edition = "2021"
license = "MIT"
name = "copy_clip"
repository = "https://github.com/Alex222222222222/CopyClip"
documentation = "https://github.com/Alex222222222222/CopyClip"
homepage = "https://github.com/Alex222222222222/CopyClip"
readme = "README.md"
version = "0.3.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[package.metadata.i18n]
load-path = "../locales"
default-language = "en-GB"
available-locales = ["en-GB", "zh-CN", "en", "de"]

[dependencies]
rust-i18n = "3.0.1"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.11"
directories = "5.0.0"
base64 = "0.22.0"
flate2 = "1.0"
chrono = "0.4.37"
clipboard-master = { git = "https://github.com/DoumanAsh/clipboard-master.git" }
# for logging
log = "0.4"
tauri-plugin-logging = { path = "../tauri-plugin-logging", features = [
    "tauri",
] }
once_cell = "1.19.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31.0", features = [
    "bundled",
    "chrono",
    "serde_json",
    # enable virtual table for backward compatibility
    "vtab",
    "functions",
] }
data-encoding = "2.6.0"
sublime_fuzzy = "0.7.0"
tauri = { version = "1.6.5", features = [
    "api-all",
    "config-json5",
    "config-toml",
    "fs-extract-api",
    "global-shortcut",
    "icon-ico",
    "icon-png",
    "notification",
    "process-command-api",
    "process-relaunch-dangerous-allow-symlink-macos",
    "system-tray",
    "windows7-compat",
] }
tauri-plugin-clipboard = "1.0"
clip = { path = "../src-clip" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
