[package]
authors = [
    "Zifan Hua <zifan.hua@icloud.com>",
    "Chloe1222 <chloekeyiw@gmail.com>",
]
description = "A feature-rich clipboard manager for Windows, Linux and macOS."
edition = "2021"
license = "MIT"
name = "copy_clip"
repository = "https://github.com/Alex222222222222/CopyClip"
documentation = "https://github.com/Alex222222222222/CopyClip"
homepage = "https://github.com/Alex222222222222/CopyClip"
readme = "README.md"
version = "0.3.10"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[package.metadata.i18n]
load-path = "../locales"
default-language = "en-GB"
available-locales = ["en-GB", "zh-CN", "en", "de"]

[dependencies]
image = { version = "0.25.1", default-features = false, features = ["png"] }
anyhow = "1.0.86"
md5 = "0.7.0"
rust-i18n = "3.1"
directories = "5.0"
base64 = "0.22"
flate2 = "1"
chrono = "0.4"
clipboard-master = { git = "https://github.com/DoumanAsh/clipboard-master.git" }
# for logging
log = "0.4"
tauri-plugin-logging = { path = "../tauri-plugin-logging", features = [
    "tauri",
] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = [
    "bundled",
    "chrono",
    "serde_json",
    # enable virtual table for backward compatibility
    "vtab",
    "functions",
] }
data-encoding = "2.6"
fuzzy-matcher = "0.3.7"
tauri = { version = "2", features = [
    "unstable",
    "config-json5",
    "tray-icon",
    "image-png",
    "image-ico",
] }
tauri-plugin-clipboard = "2.1.3"
clip = { path = "../src-clip" }
tauri-plugin-notification = { version = "2", features = ["windows7-compat"] }
tauri-plugin-fs = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
# Strip all the debug symbles
strip = true
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using whole-program analysis
lto = true

# Output lib for mobile platforms
[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "copy_clip_backend_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
