[package]
authors = [
    "Zifan Hua <zifan.hua@icloud.com>",
    "Chloe1222 <chloekeyiw@gmail.com>",
]
description = "A feature-rich clipboard manager for Windows, Linux and macOS."
edition = "2021"
license = "MIT"
name = "copy_clip"
repository = "https://github.com/Alex222222222222/CopyClip"
documentation = "https://github.com/Alex222222222222/CopyClip"
homepage = "https://github.com/Alex222222222222/CopyClip"
readme = "README.md"
version = "0.3.9"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[package.metadata.i18n]
load-path = "../locales"
default-language = "en-GB"
available-locales = ["en-GB", "zh-CN", "en", "de"]

[dependencies]
rust-i18n = "3.1"
unicode-segmentation = "1.11"
unicode-width = "0.1"
directories = "6.0"
base64 = "0.22"
flate2 = "1"
chrono = "0.4"
clipboard-master = { git = "https://github.com/DoumanAsh/clipboard-master.git" }
# for logging
log = "0.4"
tauri-plugin-logging = { path = "../tauri-plugin-logging", features = [
    "tauri",
] }
once_cell = "1.19"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = [
    "bundled",
    "chrono",
    "serde_json",
    # enable virtual table for backward compatibility
    "vtab",
    "functions",
] }
data-encoding = "2.6"
sublime_fuzzy = "0.7"
tauri = { version = "1.7", features = [
    # requireed api
    "notification-all",
    # requireed api
    "fs-all",

    "config-json5",

    "icon-ico",
    "icon-png",

    "system-tray",
    "windows7-compat",
] }
tauri-plugin-clipboard = "1.0"
clip = { path = "../src-clip" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
