[package]
name = "tauri-plugin-logging"
version = "0.0.1"
authors = ["Alex222222222222"]
description = "logging plugin for my copyclip app"
edition = "2021"
rust-version = "1.60"

[dependencies]
tauri = { version = "1.5.4", optional = true }
# used to setup logging
fern = { version = "0.6", optional = true }
log = { version = "0.4", optional = true }
# used to read user configuration
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
# format log messages
chrono = { version = "0.4.37", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
serde-wasm-bindgen = { version = "0.6.3", optional = true }

[features]
# features for the tauri plugin
tauri = [
    "dep:tauri",
    "dep:fern",
    "dep:log",
    "dep:serde_json",
    "dep:serde",
    "dep:chrono",
]
# feature for the frontend api
api = [
    "dep:serde",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:serde-wasm-bindgen",
]
